[project]
name = "bw-file-resubmit"
version = "0.6.0rc2"
license = {text = "MIT License"}
authors = [
    { name="Ilya Shalyapin", email="ishalyapin@gmail.com"},
    { name="Hugh Rundle", email="hugh@hughrundle.net" }
]
maintainers = [
  { name="Hugh Rundle", email="hugh@hughrundle.net" }
]
description = "Preserve files in Django forms during form validation errors. Drop-in replacement for django-file-resubmit"
keywords=["django", "form", "filefield", "imagefield", "resubmit", "cache"]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bookwyrm-social/bw-file-resubmit"
"Bug Tracker" = "https://github.com/bookwyrm-social/bw-file-resubmit/issues"